<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_1" >

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"
        app:layout_constraintVertical_bias="0.9">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:onClick="seven"
                android:textSize="20dp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:onClick="eight"
                android:textSize="20dp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:onClick="nine"
                android:textSize="20dp" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:onClick="multiply"
                android:textSize="20dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/four"
                android:textColor="@color/white"
                android:onClick="four"
                android:textSize="20dp" />

            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/five"
                android:textColor="@color/white"
                android:onClick="five"
                android:textSize="20dp" />

            <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/six"
                android:textColor="@color/white"
                android:onClick="six"
                android:textSize="20dp" />

            <Button
                android:id="@+id/div"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:onClick="div"
                android:textSize="20dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/one"
                android:textColor="@color/white"
                android:onClick="one"
                android:textSize="20dp" />

            <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/two"
                android:textColor="@color/white"
                android:onClick="two"
                android:textSize="20dp" />

            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/three"
                android:textColor="@color/white"
                android:onClick="three"
                android:textSize="20dp" />

            <Button
                android:id="@+id/sub"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:onClick="sub"
                android:textSize="20dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="586dp">

            <Button
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="zero"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/dot"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:onClick="dot"
                android:textSize="20dp" />

            <Button
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/add"
                android:onClick="add"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/equal"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:onClick="equal"
                android:textSize="20dp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:inputType="none"
        android:textCursorDrawable="@null"
        android:textAlignment="textEnd"
        android:text="@string/display"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button18"
        android:layout_width="134dp"
        android:layout_height="50dp"
        android:minWidth="32dp"
        android:minHeight="48dp"
        android:onClick="clear"
        android:text="@string/clear"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>